<resources>
    <string name="app_name">Login BCS</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password">password</string>
    <string name="title_intro">برجاء اختيار نوع الجهاز</string>
    <string-array name="spinner1">
        <item>S5</item>
        <item>Hot 8</item>
        <item>Note 6</item>
        <item>Smart3 Plus</item>
        <item>S4</item>
        <item>Hot 7 Pro</item>
        <item>Hot 7</item>
        <item>Zero 6 Pro</item>
        <item>Zero 6</item>
        <item>Smart 2 HD</item>
        <item>Hot 6X</item>
        <item>Note 5 Stylus</item>
        <item>S3X</item>
        <item>Hot 6</item>
        <item>Note 5</item>
        <item>Smart 2 Pro</item>
        <item>Smart 2</item>
        <item>Hot 6 Pro</item>
        <item>Zero 5 Pro</item>
        <item>Zero 5</item>
        <item>Hot 5 Lite</item>
        <item>Hot 5</item>
        <item>Note 4 Pro</item>
        <item>Note 4</item>
        <item>Smart</item>
        <item>Zero 4 Plus</item>
        <item>Zero 4</item>
        <item>S2 Pro</item>
        <item>Hot 4 Pro</item>
        <item>Hot 4</item>
        <item>Note 3 Pro</item>
        <item>Note 3</item>
        <item>Hot S</item>
    </string-array>
    <string name="scan_code">Scan Code</string>
    <string name="btn_scan">Scan Now</string>
    <string name="scan_result">Scan Result</string>
    <string name="scan_multiple">Scan multiple</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="model">Model</string>
    <string name="Name">Name</string>
    <string name="show_scanned_codes">Show Scanned Codes</string>
    <string name="insert">insert</string>
    <string name="remove">remove</string>
    <string name="user">user</string>
    <string name="todo">TODO</string>
</resources>