<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:theme="@style/AppTheme.AppBarOverlay">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_intro"
            android:hint="@string/title_intro"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_marginBottom="20dp">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_marginTop="10dip">
        </androidx.appcompat.widget.AppCompatSpinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/scan_result"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:id="@+id/scanned_code"/>
        <Button
            android:id="@+id/btn_scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/btn_scan"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_scan_more"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/scan_multiple"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/Show_Scanned_codes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/bg_register"
            android:text="@string/show_scanned_codes"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/Show_Scanned_codes2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/bg_register"
            android:text="@+string/show_scanned_codes 2"
            android:textColor="@android:color/white" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>